<resources>
    <string name="app_name">Krishak Seva</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_asked_successfully_expect_a_response_from_an_expert_within_24_hours">Question asked successfully.\nExpect a response from an expert within 24 hours.</string>
    <string name="question_or_description_cannot_be_empty">Question or description cannot be empty.</string>
    <string name="insufficient_coins">Insufficient coins...</string>
    <string name="success">Success</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="typing">Typing...</string>
    <string name="login_success">LogIn Success...</string>
    <string name="account_created_successfully">Account created successfully...</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong.\nPlease try again later.</string>
    <string name="please_agree_to_our_terms_and_conditions">Please agree to our terms and conditions.</string>
    <string name="heal_your_plant_in_your_language">Heal your plant in your language.</string>
    <string name="login_success_string">LogIn Success...</string>
    <string name="something_went_wrong_please_try_again_later_string">Something went wrong.\nPlease try again later.</string>
    <string name="account_created_successfully_string">Account created successfully...</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="please_agree_to_our_terms_and_conditions_string">Please agree to our terms and conditions.</string>
    <string name="answer_can_not_be_empty">Answer can not be empty...</string>
    <string name="answer_sent_successfully">Answer sent successfully...</string>
    <string name="file_uploaded_successfully">File Uploaded Successfully</string>
    <string name="you_will_be_verified_within_24_hours">You will be verified within 24 hours.</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="status_answered">Status - Answered</string>
    <string name="sorry_no_answer_yet_our_experts_are_working_hard_to_answer_the_question_please_be_paitent">Sorry No answer yet\nOur experts are working hard to answer the question please be paitent.</string>
    <string name="status_unanswered">Status - Unanswered</string>
    <string name="add_a_question_indicating_what_s_wrong_with_your_crop">Add a question indicating what\'s wrong with your crop?</string>
    <string name="describe_specialities_such_as_change_of_leaves_root_color_bugs_tears">Describe specialities such as change of leaves, root color, bugs, tears....</string>
    <string name="click_to_add_images">Click + to add images.</string>
    <string name="send">Send</string>
    <string name="welcome_to_nkrishak_seva_chatbot">Welcome To\nKrishak Seva ChatBot</string>
    <string name="write_here">Write here</string>
    <string name="welcome_back_expert_nto_crop_healix">Welcome Back Expert!\nTo Krishak Seva</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_from_here">Sign Up from here</string>
    <string name="start_healing_plants_now">Start healing plants now👋</string>
    <string name="krishak_seva_expert">Krishak Seva Expert</string>
    <string name="answer_question">Answer Question</string>
    <string name="loading">Loading....</string>
    <string name="answer_the_question_here">Answer the question here...</string>
    <string name="create_your_ncrop_healix_expert_account">Create Your\nKrishak Seva Expert Account</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions">Terms and Conditions.</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_from_here">Log In from here</string>
    <string name="welcome_expert_to_ncrop_healix">Welcome Expert To\nCrop Healix</string>
    <string name="account_verification">Account Verification</string>
    <string name="you_have_to_verify_your_identiy_to_use_the_app_please_upload_your_qualification_details_in_pdf_format">You have to verify your identiy to use the app please upload your qualification details in pdf format.</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="click_here_to_select_file">Click here to select file</string>
    <string name="account_status">Account Status</string>
    <string name="not_verified">Not Verified</string>
    <string name="select_your_app_language">Select your app language.</string>
    <string name="namaste">Namaste!</string>
    <string name="continue_string">Continue</string>
    <string name="by_selecting_you_agree_to_our_privacy_policy_and_terms_and_conditions">By selecting you agree to our privacy policy and terms and conditions.</string>
    <string name="welcome_back_nto_crop_healix">Welcome Back!\nTo Krishak Seva</string>
    <string name="home">Home</string>
    <string name="ask_ai">Ask AI</string>
    <string name="community">Community</string>
    <string name="you">You</string>
    <string name="recent_questions">Recent Questions</string>
    <string name="no_asked_questions_nask_some_questions_now">No asked questions.\nAsk some questions Now!</string>
    <string name="farmer">Farmer</string>
    <string name="gardner">Gardner</string>
    <string name="expert">Expert</string>
    <string name="create_your_ncrop_healix_account">Create Your\nKrishak Seva Account</string>
    <string name="expert_answer">Expert Answer</string>
    <string name="question_detail">Question Detail</string>
    <string name="coins_wallet">Coins Wallet</string>
    <string name="available_coins">Available Coins</string>
    <string name="earn_more_coins">Earn More Coins</string>
    <string name="available_rewards">Available Rewards</string>
    <string name="no_rewards_available">No Rewards Available</string>
    <string name="start_healing_your_plants_now">Start healing your plants now👋</string>
    <string name="take_the_picture_of_the_afffected_plant_and_our_expert_will_give_you_the_solution">Take the picture of the afffected plant and our expert will give you the solution.</string>
    <string name="ask_expert">Ask Expert</string>
    <string name="recent_asked_questions">Recent Asked Questions</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="weather">Weather</string>
    <string name="kanpur_20_sep">Kanpur, 04 Oct</string>
    <string name="sunset_6_08_pm">Sunset 6:08 PM</string>
    <string name="today_will_be_sunny_day">Today will be sunny day.</string>
    <string name="good_day_for_applying_pestisides">Good day for applying pestisides.</string>
    <string name="log_out">Log Out</string>
    <string name="complete_the_action_using">Complete the action using?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="question_asked_successfully_nexpect_a_response_from_expert_within_24_hours">Question asked successfully.\nExpect a response from expert within 24 hours.</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="see_details">See Details</string>
    <string name="you_question_to_the_expert">You question to the expert?</string>
    <string name="description_of_your_problem">Description of your problem?</string>
    <string name="add_an_image_to_your_problem">Add an image to your problem?</string>
    <string name="shop">Shop</string>
    <string name="chatbot">ChatBot</string>
    <string name="hey">"Hey! "</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="pesticides">Pesticides</string>
    <string name="view_all">View All</string>
    <string name="introducing">Introducing</string>
    <string name="ask_ai_coming_soon">Ask AI (Coming soon!)</string>
    <string name="how_it_will_work">How it will work?</string>
    <string name="user_scan_the_photo_of_the_plant">User scan the photo of the plant</string>
    <string name="ai_will_diagonse_the_plant">AI will diagonse the plant</string>
    <string name="heal_your_plant_crop">Heal your plant/crop.</string>
    <string name="govt_schemes">Govt. Schemes</string>
    <string name="watch_some_govt_schemes_to_earn_coins">Watch Some Govt. Schemes To Earn Coins.</string>
    <string name="welcome_expert_nto_krishak_seva">Welcome Expert\nTo Krishak Seva</string>
    <string name="available_questions">Available Questions</string>
    <string name="hey_expert">"Hey! Expert "</string>
    <string name="community_n_coming_soon">Community\n(Coming Soon!)</string>
    <string name="farmer_expert_and_other_farmers_can_interact_with_other_in_community">Farmer, Expert And Other Farmers Can Interact With Other In Community</string>
</resources>