<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/askAIFragment"
        android:icon="@drawable/ic_robot"
        android:title="@string/ask_ai" />

    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />

    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/you" />

</menu>